--- a/Resources/English.lproj/CoverStoryDocument.xib
+++ b/Resources/English.lproj/CoverStoryDocument.xib
@@ -53,12 +53,12 @@
                                     </searchField>
                                     <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="115">
                                         <rect key="frame" x="0.0" y="35" width="113" height="459"/>
-                                        <clipView key="contentView" copiesOnScroll="NO" id="ao8-ag-u5b">
+                                        <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="ao8-ag-u5b">
                                             <rect key="frame" x="0.0" y="17" width="146" height="431"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="15" headerView="506" id="116">
-                                                    <rect key="frame" x="0.0" y="0.0" width="146" height="17"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="113" height="17"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -179,7 +179,7 @@
                                 <subviews>
                                     <scrollView focusRingType="none" placeholderIntrinsicWidth="650" placeholderIntrinsicHeight="466" borderType="none" horizontalLineScroll="19" horizontalPageScroll="0.0" verticalLineScroll="19" verticalPageScroll="0.0" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="151">
                                         <rect key="frame" x="0.0" y="0.0" width="650" height="466"/>
-                                        <clipView key="contentView" id="1mh-Xq-dIZ">
+                                        <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="1mh-Xq-dIZ">
                                             <rect key="frame" x="0.0" y="0.0" width="650" height="466"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
@@ -521,6 +521,7 @@
                 <constraint firstAttribute="bottom" secondItem="521" secondAttribute="bottom" constant="3" id="nMa-M0-mEi"/>
                 <constraint firstItem="517" firstAttribute="leading" secondItem="510" secondAttribute="leading" id="xYg-zc-ddn"/>
             </constraints>
+            <point key="canvasLocation" x="329" y="557.5"/>
         </customView>
         <view id="134">
             <rect key="frame" x="0.0" y="0.0" width="125" height="1"/>
